# VRPSolverEasy

./: .gitignore  .readthedocs.yaml  CVRPTW_result.txt  CVRP_Results.txt  CVRP_result.txt  HFVRP_result.txt  LICENSE.txt  README.md  README.rst  VRPSolverEasy.pyproj  VRPSolverEasy.sln  VRPSolverPy.sln  VRPSolverReal.pyproj  VRPSolverReal.sln  pyproject.toml  python-package.yml  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml
VRPSolverEasy/: __init__.py
VRPSolverEasy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
VRPSolverEasy/advanced_demos/: CVRPTW.py
VRPSolverEasy/advanced_demos/data/CVRP/: M-n121-k7.vrp
VRPSolverEasy/advanced_demos/data/HFVRP/: brandaoN1fsmd.txt  brandaoN1hd.txt  brandaoN3hd.txt  c50_16fsmd.txt  c50_16hvrp.txt  c75_17fsmd.txt  c75_18fsmd.txt  c75_18hvrp.txt
VRPSolverEasy/demos/: CVRP.py  CVRPTW.py  HFVRP.py  MDVRP.py  RichVRP.py  example.py
VRPSolverEasy/demos/data/CVRP/: A-n12-k3.vrp  A-n16-k3.sol  A-n16-k3.vrp  A-n32-k5_result.json  A-n33-k5.vrp  A-n33-k6.vrp  A-n34-k5.vrp  A-n37-k5.vrp  A-n37-k6.vrp  A-n38-k5.vrp  A-n39-k5.vrp  A-n39-k6.vrp  A-n44-k6.vrp  A-n45-k6.vrp  A-n45-k7.vrp  A-n46-k7.vrp  A-n48-k7.vrp  A-n53-k7.vrp  A-n54-k7.vrp  A-n55-k9.vrp  A-n60-k9.vrp  A-n61-k9.vrp  A-n62-k8.vrp  A-n63-k10.vrp  A-n63-k9.vrp  A-n64-k9.vrp  A-n65-k9.vrp  A-n69-k9.vrp  A-n80-k10.vrp  B-n31-k5.vrp  B-n34-k5.vrp  B-n35-k5.vrp  B-n38-k6.vrp  B-n39-k5.vrp  B-n41-k6.vrp  B-n43-k6.vrp  B-n44-k7.vrp  B-n45-k5.vrp  B-n45-k6.vrp  B-n50-k7.vrp  (+50 more)
VRPSolverEasy/demos/data/CVRPTW/: C102.txt  C103.txt  C104.txt  C105.txt  C106.txt  C107.txt  C108.txt  C109.txt  C1_2_1.txt  C1_2_10.txt  C1_2_2.txt  C1_2_3.txt  C1_2_5.txt  C1_2_6.txt  C1_2_7.txt  C1_2_8.txt  C1_2_9.txt  C202.txt  C203.txt  C204.txt  C205.txt  C206.txt  C207.txt  C208.txt  C2_2_1.txt  C2_2_2.txt  C2_2_3.txt  C2_2_4.txt  C2_2_5.txt  C2_2_6.txt  C2_2_7.txt  C2_2_8.txt  R102.txt  R103.txt  R104.txt  R105.txt  R106.txt  R107.txt  R108.txt  R109.txt  (+66 more)
VRPSolverEasy/demos/data/HFVRP/: X101-FSMFD.vrp  X106-FSMD.vrp  X110-HD.vrp  X115-HVRP.vrp  X120-FSMF.vrp  X125-HVRP.vrp  X129-FSMFD.vrp  X134-FSMD.vrp  X139-HD.vrp  X143-FSMF.vrp  X148-HVRP.vrp  X153-FSMFD.vrp  X157-HD.vrp  X162-FSMD.vrp  X167-FSMF.vrp  X172-HVRP.vrp  X176-FSMFD.vrp  X181-HD.vrp  X186-FSMD.vrp  X190-FSMF.vrp  X195-FSMF.vrp  X200-HD.vrp  brandaoN0.txt  brandaoN2hd.txt  brandaoN3fsmd.txt  brandaoN4hd.txt  brandaoN5fsmd.txt  c100_19fsmd.txt  c100_20hvrp.txt  c50_13hvrp.txt  c50_14fsmfd.txt  c50_14hvrp.txt  c50_15fsmfd.txt  c50_15hd.txt  c50_15hvrp.txt  c50_16fsmf.txt  c75_17fsmf.txt  c75_18fsmf.txt  c75_18hd.txt
VRPSolverEasy/demos/data/MDVRP/: p02  p03  p04  p05  p06  p07  p09  p10  p12  p13  p14  p15  p16  p17  p18  p19  p20  p21  p22  p23  pfbo  pr01  pr02  pr03  pr04  pr05  pr06  pr07  pr08  pr09  pr10
VRPSolverEasy/demos/data/RichVRP/: toy.txt
VRPSolverEasy/doc/: README.md
VRPSolverEasy/doc/source/: conf.py  index.rst
VRPSolverEasy/doc/source/Demos/: index.rst
VRPSolverEasy/doc/source/Installation/: index.rst
VRPSolverEasy/doc/source/Mathematical modeling/: index.rst
VRPSolverEasy/lib/Dependencies/: libClp.0.dylib  libOsi.0.dylib  libOsiClp.0.dylib  libblas.so.3  libquadmath.so.0.0.0  libz.so.1.2.11
VRPSolverEasy/ortools_demos/: CVRP.py  CVRPTW.py  HFVRP.py  README.md
VRPSolverEasy/plafrim_exp/: README.txt  prepare_experiments.py
VRPSolverEasy/plafrim_exp/jobs/: B-n68-k9.out  BaPTree.dot  CVRPTW_C101_CLP_30_no.sh  CVRPTW_C101_CLP_30_yes.sh  CVRPTW_C101_CPLEX_30_no.sh  CVRPTW_C101_CPLEX_30_yes.sh  CVRPTW_C201_CLP_30_no.sh  CVRPTW_C201_CLP_30_yes.sh  CVRPTW_C201_CPLEX_30_no.sh  CVRPTW_C201_CPLEX_30_yes.sh  CVRPTW_R101_CLP_30_no.sh  CVRPTW_R101_CLP_30_yes.sh  CVRPTW_R101_CPLEX_30_no.sh  CVRPTW_R101_CPLEX_30_yes.sh  CVRPTW_R201_CLP_30_no.sh  CVRPTW_R201_CLP_30_yes.sh  CVRPTW_R201_CPLEX_30_no.sh  CVRPTW_R201_CPLEX_30_yes.sh  CVRPTW_RC101_CLP_30_no.sh  CVRPTW_RC101_CLP_30_yes.sh  CVRPTW_RC101_CPLEX_30_no.sh  CVRPTW_RC101_CPLEX_30_yes.sh  CVRPTW_RC201_CLP_30_no.sh  CVRPTW_RC201_CLP_30_yes.sh  CVRPTW_RC201_CPLEX_30_no.sh  CVRPTW_RC201_CPLEX_30_yes.sh  CVRP_A-n32-k5_CLP_30_no.sh  CVRP_A-n32-k5_CLP_30_yes.sh  CVRP_A-n32-k5_CPLEX_30_no.sh  CVRP_A-n32-k5_CPLEX_30_yes.sh  CVRP_A-n33-k5_CLP_30_no.sh  CVRP_A-n33-k5_CLP_30_yes.sh  CVRP_A-n33-k5_CPLEX_30_no.sh  CVRP_A-n33-k5_CPLEX_30_yes.sh  CVRP_A-n33-k6_CLP_30_no.sh  CVRP_A-n33-k6_CLP_30_yes.sh  CVRP_A-n33-k6_CPLEX_30_no.sh  CVRP_A-n33-k6_CPLEX_30_yes.sh  CVRP_A-n34-k5_CLP_30_no.sh  CVRP_A-n34-k5_CLP_30_yes.sh  (+455 more)
VRPSolverEasy/src/: constants.py  solver.py
VRPSolverEasy/tests/: unit_tests.py
VRPSolverEasy/tests/config/: bc.cfg
VRPSolverEasy/vroom_demos/: CVRP.py  CVRPTW.py  HFVRP.py
VRPSolverPy/: BaPTree.dot  CVRP.json  CVRPTW_noFeasible.json  MANIFEST  TSP.json  TSP_noFeasible.json  VRP.json  VRPSolverPy.pyproj  instance.json  setup.py
VRPSolverPy/VRPSolverPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
VRPSolverPy/env/: pyvenv.cfg
VRPSolverPy/env/Scripts/: activate  activate.bat
VRPSolverPy/src/: VRPSolverReal.py  constants.py
VRPSolverPy/tests/: unit_tests.py
VRPSolverReal/: .travis.yml  BaPTree.dot  RC101.json  VRPSolverReal.pyproj  pyproject.toml
VRPSolverReal/lib/Dependencies/: libClp.0.dylib  libClp.so.0.0.0  libCoinUtils.0.dylib  libOsiClp.0.dylib
VRPSolverReal/lib/Linux/: libClp.so.1  libCoinUtils.so.0  libCoinUtils.so.3  libm.so.6
VRPSolverReal/src/: BaPTree.dot  VRPSolverReal.py  constants.py  instance.json  solver.py
VRPSolverReal/tests/: unit_tests.py
docs/: conf.py  index.rst  requirements.txt
docs/Bibliography/: index.rst  refs.bib
docs/Demos/: CVRP.rst  CVRPTW.rst  HFVRP.rst  MDVRP.rst  RichVRP.rst  index.rst
docs/Example/: index.rst
docs/Important notes/: index.rst
docs/Installation/: index.rst
docs/Python modeling/: API.rst  Example.rst
docs/Solver API/: index.rst
(+45 files in other folders)
